...
            "state" : "translated",
            "value" : "關於這部iPad"
          }
        }
      }
    },
    "Accessibility" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "تسهيلات الاستخدام"
...
            "state" : "translated",
            "value" : "相機"
          }
        }
      }
    },
    "Cancel" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "إلغاء"
...
            "state" : "translated",
            "value" : "接續互通除錯"
          }
        }
      }
    },
    "Control Center" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "مركز التحكم"
...
            "state" : "translated",
            "value" : "正在中斷連線⋯"
          }
        }
      }
    },
    "Display & Brightness" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "شاشة العرض والإضاءة"
...
            "state" : "translated",
            "value" : "Game Center"
          }
        }
      }
    },
    "General" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "عام"
...
            "state" : "translated",
            "value" : "個人熱點"
          }
        }
      }
    },
    "Privacy & Security" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "الخصوصية والأمن"
...
            "state" : "translated",
            "value" : "螢幕使用時間"
          }
        }
      }
    },
    "Search" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "البحث"
...
            "state" : "translated",
            "value" : "此安全研究裝置已為研究目的所修改。此裝置不可做為個人使用。你不應該在此裝置上輸入個人密碼或「Apple帳號」憑證。\n\nProperty of Apple Inc.\nConfidential and Proprietary\nCall +1 877-595-1125"
          }
        }
      }
    },
    "Settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "الإعدادات"
...
