...
            "value": "Tekststørrelse"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Text Size"
          }
        },
        "no": {
          "stringUnit": {
            "state": "translated",
            "value": "Tekststørrelse"
...
            "state": "translated",
            "value": "Automatski"
          }
        }
      }
    },
    "BRIGHTNESS": {
      "extractionState": "manual",
      "localizations": {
        "he": {
          "stringUnit": {
            "state": "translated",
            "value": "בהירות"
...
            "value": "Automatisk lås"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Auto-Lock"
          }
        },
        "no": {
          "stringUnit": {
            "state": "translated",
            "value": "Autolås"
...
