...
    var body: some View {
        CustomList(title: "Maps") {
            Section(content: {
                SettingsLink(icon: "applesiri", id: "Siri & Search", content: {
                    SiriSearchDetailView(appName: "Maps")
                })
                IconToggle(enabled: $backgroundAppRefreshEnabled, color: .gray, icon: "gear", title: "Background App Refresh")
            }, header: {
                Text("Allow Maps to Access")
            }, footer: {
                Text("[About Apple Maps & Privacy...](#)")
            })
            
...
